--- a/index.html
+++ b/index.html
@@ -4,56 +4,67 @@
         <title>Tortoiseshell Optics</title>
         <link href="./resources/css/reset.css" rel="stylesheet" type="text/css"/>
         <link href="./resources/css/style.css" rel="stylesheet" type="text/css"/>
-        <link href="./resources/css/flexbox.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header>
-            <div class="banner">
-                <div class="header-1">
-                    <div class="Navigation">
+            <div class="header">
+                <div class="top-header">
+                    <div class="top-header-content">
                         <img src="./resources/images/logo-white.png" alt="logo"/>
-                        <Span class="sitename">Tortoiseshell Optics</span>
-                        <span class="nav">Services</span>
-                        <span class="nav">Products</span>
-                        <span class="nav">Contact</span>
+                        <p>Tortoiseshell Optics</p>
                     </div>
-                    <div class="banner-text">
-                        <h1>DON'T JUST LOOK, SEE.</h1>
+                    <div class="top-header-content">
+                        <nav>
+                            <span>Services</span>
+                            <span>Products</span>
+                            <span>Contact</span>
+                        </nav>
+                    </div>
+                </div>
+                <div class="banner-header">
+                    <div class="banner-header-content">
+                        <span>DON'T JUST LOOK, SEE.</span>
                     </div>
                 </div>
             </div>
         </header>
         <main>
-            <div class="top-page">
-                <div class="top-item">
-                    <img class="paper item" src="./resources/images/paper-icon.png" alt="paper"/>
-                    <span class="item">Comprehensive Exams</span>
+            <div class="top-main">
+                <div class="top-main-content">
+                    <div>
+                        <img class="paper" src="./resources/images/paper-icon.png"/>
+                    </div>
+                    <span>Comprehensive Exams</span>
                 </div>
-                <div class="top-item">
-                    <img class="ruler item" src="./resources/images/ruler-icon.png" alt="ruler"/>
-                    <span class="item">Customer Fittings</span>
+                <div class="top-main-content">
+                    <div>
+                        <img class="ruler" src="./resources/images/ruler-icon.png"/>
+                    </div>
+                    <span>Customer Fittings</span>
                 </div>
-                <div class="top-item">
-                    <img  class="delivery item" src="./resources/images/truck-icon.png" alt="Delivery"/>
-                    <span class="item">Fast Delivery</span>
+                <div class="top-main-content">
+                    <div>
+                        <img class="truck" src="./resources/images/truck-icon.png"/>
+                    </div>
+                    <span>Fast Delivery</span>
                 </div>
             </div>
-            <div class="bottom-page">
-               <div class="bottom-content">
-                  <span class="bottom-item bottom-header">PHILOSOPHY</span>
-                  <p class="bottom-item">Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
-               </div>
-               <div class="bottom-content">
-                 <span class="bottom-item bottom-header">APPOINTMENTS</span>
-                 <p class="bottom-item">Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
-               </div>
+            <div class="bottom-main">
+                <div>
+                    <Span>PHILOSOPHY</SPAN>
+                    <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+                </div>
+                <div>
+                    <span>APPOINTMENTS</span>
+                    <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+                </div>
             </div>
         </main>
         <footer>
-            <div class="footer-background">
-                <div class="footer-content">
-                    <img class="footer-logo" src="./resources/images/logo-black.png" alt="logo"/>
-                    <span class="footer-copyright">Copyright Tortoiseshell Optics</span>
+            <div class=footer>
+                <div>
+                    <img src="./resources/images/logo-black.png"/>
+                    <span>Copyright Tortoiseshell Optics</span>
                 </div>
             </div>
         </footer>
