Desktop version completion

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 </div>
             </div>
             <div class="bottom-main">
-                <div>
+                <div class="bottom-main-content">
                     <Span>PHILOSOPHY</SPAN>
                     <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
                 </div>
-                <div>
+                <div class="bottom-main-content">
                     <span>APPOINTMENTS</span>
                     <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
                 </div>
@@ -62,7 +62,7 @@
         </main>
         <footer>
             <div class=footer>
-                <div>
+                <div class="footer-content">
                     <img src="./resources/images/logo-black.png"/>
                     <span>Copyright Tortoiseshell Optics</span>
                 </div>
