--- a/index.html
+++ b/index.html
@@ -5,67 +5,61 @@
         <link href="./resources/css/reset.css" rel="stylesheet" type="text/css"/>
         <link href="./resources/css/style.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body>
+    <body class="container">
         <header>
             <div class="header">
-                <div class="top-header">
-                    <div class="top-header-content">
-                        <img src="./resources/images/logo-white.png" alt="logo"/>
-                        <p>Tortoiseshell Optics</p>
-                    </div>
-                    <div class="top-header-content">
-                        <nav>
+                <div class="header-content layout">
+                    <div class="top-header-content container"/>
+                        <img src="./resources/images/logo-white.png" alt="website logo"/>
+                        <h1>Tortoiseshell Optics</h1>
+                        <nav class="container desktop">
                             <span>Services</span>
                             <span>Products</span>
                             <span>Contact</span>
                         </nav>
+                        <nav class="container mobile">
+                            <span>Menu</span>
+                        </nav>
                     </div>
-                </div>
-                <div class="banner-header">
-                    <div class="banner-header-content">
-                        <span>DON'T JUST LOOK, SEE.</span>
+                    <div class="banner-header-content container">
+                        <h2>DON'T JUST LOOK, SEE.</h2>
                     </div>
                 </div>
             </div>
         </header>
         <main>
-            <div class="top-main">
-                <div class="top-main-content">
-                    <div>
-                        <img class="paper" src="./resources/images/paper-icon.png"/>
-                    </div>
+            <div class="main-top layout container">
+                <div class="container paper">
+                    <img src="./resources/images/paper-icon.png" alt="paper image"/>
                     <span>Comprehensive Exams</span>
                 </div>
-                <div class="top-main-content">
-                    <div>
-                        <img class="ruler" src="./resources/images/ruler-icon.png"/>
-                    </div>
-                    <span>Customer Fittings</span>
+                <div class="container ruler">
+                    <img src="./resources/images/ruler-icon.png" alt="ruler image"/>
+                    <span>Custom Fittings</span>
                 </div>
-                <div class="top-main-content">
-                    <div>
-                        <img class="truck" src="./resources/images/truck-icon.png"/>
-                    </div>
+                <div class="container truck">
+                    <img src="./resources/images/truck-icon.png" alt="truck image"/>
                     <span>Fast Delivery</span>
                 </div>
             </div>
-            <div class="bottom-main">
-                <div class="bottom-main-content">
-                    <Span>PHILOSOPHY</SPAN>
-                    <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+            <div class="main-bottom layout container">
+                <div class="container">
+                    <h1>PHILOSOPHY</h1>
+                    <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone
+                      deserves to see the world, not matter what. That's why we offer eye exams, customer
+                      fittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
                 </div>
-                <div class="bottom-main-content">
-                    <span>APPOINTMENTS</span>
-                    <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+                <div class="container">
+                    <h1>APPOINTMENTS</h1>
+                    <p>Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday,
+                      9AM - 6PM.</p>
                 </div>
             </div>
         </main>
         <footer>
-            <div class=footer>
-                <div class="footer-content">
-                    <img src="./resources/images/logo-black.png"/>
-                    <span>Copyright Tortoiseshell Optics</span>
-                </div>
+            <div class="footer layout container">
+                <img src="./resources/images/logo-black.png" alt="footer logo"/>
+                <span>Copyright Tortoiseshell Optics</span>
             </div>
         </footer>
     </body>
